# paradox

./: .coveragerc  .gitignore  CHANGELOG.rst  README.md  build.py  button.py  django_settings.py  django_settings_test.py  env-local.example  exception_handler.py  fileprovider_paths.xml  fixtures.py  forms_federal.json  forms_general.json  label.py  lockorator.py  main.py  main_task.py  manage.py  mo_78.json  pyproject.toml  pytest.ini  regions.json  requirements.txt  requirements_test.txt  requirements_win.txt  smartcamera.py  test.py  textinput.py  trio_simpler.py  util.py  whitelist.txt
.github/workflows/: ci.yml
paradox/: camera.py  campaigns.py  client.py  complaint_rules.txt  config.py  config_local.py  core.py  exception_handler.py  forms.py  gallery.py  models.py  objects_manager.py  position.py  scheduler.py  signalmap.py  utils.py
paradox/client/: __init__.py  base.py  get_campaigns.py  post_patch_answer.py  post_patch_image.py  post_position.py  post_userprofile.py
paradox/migrations/: 0001_initial.py  0002_auto_20190420_0653.py  0002_auto_20190505_0540.py  0002_auto_20190706_0515.py  0003_auto_20190420_0743.py  0003_auto_20190517_0837.py  0003_auto_20190706_1303.py  0004_auto_20190420_0814.py  0004_auto_20190517_1140.py  0004_inputevent_tik_complaint_status.py  0005_auto_20190424_1223.py  0005_auto_20190518_0223.py  0006_auto_20190424_1224.py  0010_auto_20191220_1123.py  0014_auto_20191220_1131.py  0023_auto_20200430_0323.py  0024_auto_20200501_1153.py  0025_auto_20200501_1218.py
paradox/net/: __init__.py  get.py  release.py  release2.c  release2.py  send.py  sentry.py
paradox/uix/: __init__.py  base.kv  base_input.py  button.py  choices.py  click_label.py  complaint.py  confirm.py  constants.kv  float_message.py  frozen_editor.py  hbox.py  imagebutton.py  imagepicker.py  label.py  main_widget.py  multibool_input.py  newversion_dialog.py  numeric_input.py  sidepanel.py  terms_dialog.py  top_loader.py  true_none_false.py  valued_button.py  vbox.py
paradox/uix/navigationdrawer/: navigationdrawer.py
paradox/uix/quiz_widgets/: base.py  multibool_input.py  numeric_input.py  true_none_false.py  yes_no.py  yes_no_cancel.py
paradox/uix/screens/: about_screen.py  communication_screen.py  complaint_screen.py  coordinators_screen.py  error_screen.py  events_screen.py  form_screen.py  formlist_screen.py  handbook_screen.py  home_screen.py  organizations_screen.py  position_screen.py  quiztopic_screen.py  screen_manager.py  screenmgr.py  screens.py  tik_complaint_screen.py  userprofile_screen.py
recipes/: __init__.py
recipes/kivy_2.3.1/: __init__.py
recipes/kivy_async/: __init__.py
recipes/kivy_myasync/: __init__.py
recipes/kivy_test/: __init__.py
recipes/sdl2_hg/: __init__.py
src/: main.py
src/paradox/: config.py  config_local.example.py  exception_handler.py  label.py  logging_setup.py  main.py  main_task.py  models.py  quiz_topics_ru.json  utils.py  zachem_pisat_jalobu.txt
src/paradox/client/: __init__.py  base.py  get_campaigns.py  post_patch_answer.py  post_patch_image.py  post_position.py
src/paradox/migrations/: 0001_initial.py  0005_auto_20190712_0241.py  0006_auto_20190730_1438.py  0007_auto_20190815_0635.py  0008_auto_20190824_1136.py  0009_auto_20191220_1122.py  0011_auto_20191220_1125.py  0012_auto_20191220_1125.py  0013_auto_20191220_1126.py  0015_auto_20191220_1137.py  0016_auto_20191223_0455.py  0017_auto_20191228_0336.py  0018_auto_20191228_0352.py  0019_campaign_elections_name.py  0020_auto_20200305_0528.py  0021_auto_20200404_0216.py  0022_auto_20200404_0225.py
src/paradox/uix/: __init__.py  base.kv  button.py  choices.py  click_label.py  confirm.py  float_message.py  frozen_editor.py  imagebutton.py  imagepicker.py  label.py  main_widget.py  side_panel.py  sidepanel.py  terms_dialog.py  top_loader.py  vbox.py
src/paradox/uix/navigationdrawer/: navigationdrawer_fixed.py
src/paradox/uix/quiz_widgets/: __init__.py  base.py  multibool_input.py  numeric_input.py  true_none_false.py  yes_no.py
tests/: base.py  django_settings_test.py  fixtures.py  test.py  test_complaint.py  test_fill_profile.py
winbuild/: paradox.spec
(+19 files in other folders)
