[project]
name = "paradox"
version = "0.1"
description = "mobile app"
authors = [
    {name = "Evstifeev Roman", email = "someuniquename@gmail.com"},
]
dependencies = [
    "app-state>=0.5",
    "colorama==0.4.1",
    "docutils==0.14",
    "hpack==3.0.0",
    "httpx==0.27.*",  # Wait for https://github.com/lundberg/respx/pull/278
    "Kivy==2.3.*",
    "Kivy-Garden==0.1.4",
    "lockorator==0.1",
    "loguru",
    "minidjango==2.2.3.dev20190701035504",
    "Pillow<=11.0",
    "plyer==1.4.0",
    "python-dateutil",
    "rfc3986==1.3.2",
    "sniffio==1.1.0",
    "sqlparse==0.3.0",
    "getinstance>=0.7"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=0.24",
    "pytest-env==0.6.2",
    "pytest-mock==1.10.4",
    "pytest-remove-stale-bytecode==4.0",

    "respx>=0.21",
]
debug = [
    "ipdb>=0.13.13",
]
dev = [
    "-e file:///${PROJECT_ROOT}/../app_state#egg=app_state"
]
build = [
    "django-environ>=0.11.2",
    "click>=8.1.7",
    "Cython>=3.0.11",
    "rich>=13.9.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
