[project]
name = "paradox"
version = "0.1"
description = "mobile app"
authors = [
    {name = "Evstifeev Roman", email = "someuniquename@gmail.com"},
]
dependencies = [
    "app-state>=0.5",
    "colorama==0.4.1",
    "httpx==0.27.*",  # Wait for https://github.com/lundberg/respx/pull/278
    "Kivy==2.3.*",
    "lockorator==0.1",
    "loguru",
    "minidjango==2.2.3.dev20190701035504",
    "Pillow<=11.0",
    "plyer==1.4.0",
    "python-dateutil",
    "sniffio==1.1.0",
    "getinstance>=0.7",
    "setuptools>=75.6.0"  # minidjango still needs distutils, which is removed in python 3.12
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=0.24",
    "pytest-env==0.6.2",
    "pytest-mock==1.10.4",
    "respx>=0.21",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pyvirtualdisplay>=3.0",
]
debug = [
    "ipdb>=0.13.13",
]
dev = [
    "-e file:///${PROJECT_ROOT}/../app_state#egg=app_state"
]
build = [
    "django-environ>=0.11.2",
    "click>=8.1.7",
    "Cython>=3.0.11",
    "rich>=13.9.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools.packages.find]
# p4a tries to install paradox with setuptools and encounters this bug:
# https://github.com/pypa/setuptools/issues/4076
# "pip install . creates infinite nested build/lib/build/lib/..."
exclude = ["build*"]

[tool.pdm]
distribution = true


[tool.pdm.scripts]
# _.env_file = "env-local"
main = "src/main.py"
